fix arrow spacing

--- a/components/bracket-challenge/bracket-challenge.module.scss
+++ b/components/bracket-challenge/bracket-challenge.module.scss
@@ -35,10 +35,10 @@
 }
 
 .leftArrow {
-  left: 5%;
+  left: 5% !important;
 }
 .rightArrow {
-  right: 5%;
+  right: 5% !important;
 }
 
 @media screen and (max-width: variables.$mobile) {
